k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pinky-promise-app
  labels:
    app: pinky-promise-app
    component: backend
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: pinky-promise-app
    component: backend
