k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pinky-promise-ingress
  labels:
    app: pinky-promise
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "pinky-promise-ip"
    networking.gke.io/managed-certificates: "pinky-promise-ssl-cert"
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
  - host: pinky-promise.example.com
    http:
      paths:
      - path: /api/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: pinky-promise-backend
            port:
              number: 80
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: pinky-promise-frontend
            port:
              number: 80
